@@ -61,6 +61,12 @@ The overall structure is this:
           "From2" : "To2"
           "From3" : "To3"
 
+    - set:
+        name: 'setname'
+        values:
+        - 'foo'
+        - 'bar'
+
     - matcher:
         options:
         - 'verbose'
@@ -228,6 +234,7 @@ Not equals | != | agent.(1)product.version!="1.0" | agent.(1)product.(2)version 
 Contains | ~ | agent.product.name~"ar" | agent.(2)product.(1)name="bar baz" | The first product name when backtracking that contains "ar"
 Starts with | { | agent.product.name{"b" | agent.(2)product.(1)name="bar baz" | The first product name when backtracking that starts with "b"
 Ends with | }| agent.product.name}"z" | agent.(2)product.(1)name="bar baz" | The first product name when backtracking that ends with "z"
+(Key)set contains | ? | agent.product.name?mySetOfValues | agent.(3)product.(1)name | The name of the third product was present in the defined set of values. This set may be a "set" or a "lookup" in the last case only the keys of this lookup will be evaluated  
 
 Extracting substrings
 
