@@ -170,4 +170,5 @@ v3.1
 v3.2
 ===
 - Detect Chromium, SugarLabs, Ubuntu Touch
-
+- Detect few more robots
+- New matching language feature: Is this value present in a predefined set of values?
